chandeliers-lus/tests/compile_fail/ui/causality/redef-var-def.stderr
error: Attempt to redefine Variable `a`, when a prior item already defines it
 --> tests/compile_fail/ui/causality/redef-var-def.rs:8:9
  |
8 |         a = 7;
  |         ^^^^^
  |
note: Already defined here
 --> tests/compile_fail/ui/causality/redef-var-def.rs:7:9
  |
7 |         a = 42;
  |         ^^^^^^
